[gd_scene load_steps=4 format=3 uid="uid://c6b23jcajtlvj"]

[ext_resource type="Texture2D" uid="uid://bd2ntgxdjlwyk" path="res://images/bullet.png" id="1_8xpkp"]
[ext_resource type="Script" path="res://bullets/bullet.gd" id="1_gnyv8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_eweju"]
radius = 3.0

[node name="Bullet" type="Area2D" groups=["Bullet"]]
collision_layer = 2
script = ExtResource("1_gnyv8")

[node name="Bullet" type="Sprite2D" parent="."]
position = Vector2(-5.96046e-08, -5.96046e-08)
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_8xpkp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_eweju")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-1.19209e-07, -1.19209e-07)
scale = Vector2(0.45, 0.45)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
